# human_context

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: authentication.mdc  error-handling.mdc
alembic/: env.py
alembic/versions/: 001_enable_pgvector_and_embedding_records.py  002_add_claude_export_tables.py  003_add_super_admin_and_nullable_org.py  004_fix_default_user_email.py  005_add_chat_tables.py  006_add_context_user_id_to_chat_threads.py  007_add_oauth_accounts.py
app/: main.py
app/api/: deps.py
app/core/: config.py  database.py  exception_handlers.py  exceptions.py  listing.py  openai_http.py  redis.py  security.py  sync_database.py
app/filters/: organizations.py  users.py
app/models/: __init__.py  chat_message.py  chat_thread.py  conversation.py  embedding.py  enums.py  import_job.py  message.py  oauth_account.py  organization.py  user.py
app/schemas/: auth.py  chat.py  import_job.py  organization.py  pagination.py  query.py  task.py  user.py
app/services/: auth_service.py  chat_service.py  claude_parser.py  (+13 more)
docker/: entrypoint.sh
docs/: API.md
scripts/: debug_env_check.py  setup.sh
tests/: conftest.py  test_auth.py  test_chat_service.py  test_chats.py  test_claude_parser.py  test_config.py  test_context_access_service.py  test_embedding_service.py  test_error_handling.py  test_health.py  test_import_service.py  test_imports.py  test_oauth.py  test_organizations.py  test_query_service.py  test_rate_limit_service.py  test_users.py
(+12 files in other folders)
